# timeflux_hackeeg

./: README.rst  setup.cfg
examples/: advanced.yaml  simple.yaml
test/: test_hackeeg.py
timeflux_hackeeg/nodes/: driver.py
